move to MDG, re-enable compat, update neo